projects/vb6parse/snapshots/tests/library/financial/npv/npv_property_assignment.snap
---
source: projects/vb6parse/tests/library/financial/npv.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: obj
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: NewExpression
          children:
            - kind: NewKeyword
              text: New
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: Investment
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: obj
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: PresentValue
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: NPV
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: MemberAccessExpression
                      children:
                        - kind: Identifier
                          text: obj
                        - kind: PeriodOperator
                          text: "."
                        - kind: Identifier
                          text: Rate
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: MemberAccessExpression
                      children:
                        - kind: Identifier
                          text: obj
                        - kind: PeriodOperator
                          text: "."
                        - kind: Identifier
                          text: CashFlows
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
